app building done

--- a/config/config.json
+++ b/config/config.json
@@ -10,5 +10,15 @@
   "data_processing": {
     "root_dir": "artifacts/preprocessor",
     "preprocessor_object_file_name": "preprocessor.joblib"
+  },
+  "model_training": {
+    "root_dir": "artifacts/models",
+    "experiment_name": "Loan_Approval_RandomForest",
+    "registered_model_name": "LoanApprovalRandomForestModel",
+    "artifact_path": "loan_approval_model",
+    "cv_folds": 3,
+    "random_state": 42,
+    "test_size": 0.2,
+    "val_size": 0.25
   }
 }
