--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install project dependencies (including dvc[s3])
-        run: pip install -r requirements-actions.txt
+        run: pip install -r requirements.txt
 
       - name: Install Git (DVC dependency)
         run: sudo apt-get update && sudo apt-get install -y git
